News UAT/force-app/main/default/objects/Negotiation_Point__c/Negotiation_Point__c.object-meta.xml
<CustomObject>
    <description>Negotiation Points are used to define Targeting Discount (%) for Print and Digital products based on the total score derived from Negotiation Point parameters (i.e. Frequence, Share of Wallet, etc).</description>
    <label>Negotiation Point</label>
    <nameField>
        <displayFormat>NP-{000}</displayFormat>
        <label>Negotiation Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negotiation Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>