News UAT/force-app/main/default/objects/Negotiation_Point__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Platform of the Negotiation Point parameter used in determining the Negotiation Score.</description>
    <inlineHelpText>Platform of the Negotiation Point parameter used in determining the Negotiation Score.</inlineHelpText>
    <label>Platform</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>