News UAT/force-app/main/default/objects/Negotiation_Point__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value of the Negotiation Point parameter used in  determining the Negotiation Score.</description>
    <inlineHelpText>Value of the Negotiation Point parameter used in  determining the Negotiation Score.</inlineHelpText>
    <label>Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>