News UAT/force-app/main/default/objects/Negotiation_Point__c/listViews/Print_Negotiation_Points.listView-meta.xml
<ListView>
    <fullName>Print_Negotiation_Points</fullName>
    <columns>NAME</columns>
    <columns>Platform__c</columns>
    <columns>Value__c</columns>
    <columns>Name__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform__c</field>
        <operation>equals</operation>
        <value>Print</value>
    </filters>
    <label>Print Negotiation Points</label>
</ListView>